# CExampleProject

./: .gitignore  .toolsharerc  README.md  default_launch.json  spatialos.json  v15-upgrade-log.md
.buildkite/: premerge.definition.yaml  premerge.steps.yaml
ci/: Dockerfile  build.sh  spatial
dependencies/: CMakeLists.txt
schema/: client_data.schema
snapshots/: default.json  default.snapshot  default.txt
workers/c_client_direct/: CMakeLists.txt  build.json  client.c  spatialos.client_direct.worker.json  spatialos_worker_packages.json
workers/c_client_vtable/: CMakeLists.txt  build.json  client.c  schema_types.c  schema_types.h  spatialos.client_vtable.worker.json  spatialos_worker_packages.json
workers/cpp_physics/: .gitignore  CMakeLists.txt  build.json  physics.cc  spatialos.physics.worker.json  spatialos_worker_packages.json
workers/csharp_physics/: .gitignore  CsharpWorker.csproj  spatialos.physics.worker.json
workers/csharp_physics/src/: Main.cs
